--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,16 @@
-
-/* Your CSS Code here. */
+  table,th,td {
+    border:1px solid black;
+}
+table {
+    width: 100%; 
+    height: 100%;
+}
+th,td {
+    width:50%;
+}
+ul,td {
+    text-align:center;
+}
+#tb1>tr{
+    display:inline;
+}
